less: Fix white space overflow in post collection modals

--- a/less/overlays.mix.less
+++ b/less/overlays.mix.less
@@ -225,3 +225,7 @@ input[type=number], input[type=text], input[type=password], textarea {
 @keyframes blinker {
   50% { opacity: 0.0; }
 }
+
+.post-collection {
+	white-space: initial;
+}
